--- a/w07/d02/starter/views/index.ejs
+++ b/w07/d02/starter/views/index.ejs
@@ -14,6 +14,12 @@
       <h1 class="pull-left">Cards Against Assembly</h1>
     </header>
 
+    <nav class="tabs">
+      <a href="#/">Home</a>
+      <a href="#/new">Add a New Card</a>
+      <a href="#/about">About</a>
+    </nav>
+
     <section id="cards" class="container-fluid">
       <div class="row">
 
