--- a/w07/d04/solution/youtube-react/src/App.css
+++ b/w07/d04/solution/youtube-react/src/App.css
@@ -1,24 +1,44 @@
-.App {
+.search-bar {
+  margin: 20px;
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.search-bar input {
+  width: 75%;
+  height: 35px;
+  padding: 4px 8px;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.video-main .details {
+  margin-top: 10px;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
 }
 
-.App-intro {
-  font-size: large;
+.video-main .details div:first-child {
+  font-weight: bold;
+  font-size: 125%;
+  line-height: 180%;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.list-group {
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+.list-group-item {
+  cursor: pointer;
+}
+
+.list-group-item img {
+  max-width: 120px;
+}
+
+.list-group-item .media-heading {
+  padding-top: 10px;
+}
+
+.list-group-item:hover {
+  background-color: tomato;
 }
