--- a/w08/d02/morning/starter/quote-machine/src/index.css
+++ b/w08/d02/morning/starter/quote-machine/src/index.css
@@ -24,8 +24,18 @@ nav li a.active, nav li a:hover {
 }
 
 .quotes .quote {
-  display: inline-block;
   padding: 5px;
   margin-right: 20px;
   list-style: none;
+}
+.btn{
+  width: auto;
+}
+
+h2{
+  text-align: center;
+}
+body{
+  /*background-color: black;
+  color: white;*/
 }
